JCR-4009: CSRF in Jackrabbit-Webdav (ported to 2.10)
CSRFUtil: properly parse content types (handle params, normalize, handle case differences also multiple field instances), handle missing content type header field, handle partial-URI in referer, DEBUG logging

WebDAV servlet: disable bogus POST support

Davex: include Referer header field in POST requests used for davex remoting

git-svn-id: https://svn.apache.org/repos/asf/jackrabbit/branches/2.10@1758761 13f79535-47bb-0310-9956-ffa450edef68